Correctly size scoring inputs on iOS devices, closes #102

--- a/client/options-view/option/style.css
+++ b/client/options-view/option/style.css
@@ -173,11 +173,9 @@
   border: none;
   background-color: transparent;
   border-bottom: 2px dotted var(--lightgreen);
-  width: auto;
   text-align: center;
   cursor: pointer;
   font-weight: var(--bold);
-  display: inline-block;
   height: 22px;
 }
 
